# gnedby

./: Cargo.toml  LICENSE  README.md  gnedby-spec.adoc  spec.adoc
.github/workflows/: ci.yml
src/: main.rs
src/api/: mod.rs
src/cli/: commands.rs  parser.rs
src/config/: mod.rs  models.rs  operations.rs
src/db/: models.rs  operations.rs
src/embed/: downloader.rs  mod.rs  model.rs  models.rs  processor.rs
src/metadata/: apple.rs  mod.rs  models.rs
src/sync/: mod.rs
src/web/: server.rs
src/web/static/: script.js  style.css
templates/: albums.html
