[package]
name = "gnedby"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing your CD/LP collection"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
chrono = "0.4"
directories = "6.0"
comfy-table = "7.1"
sha2 = "0.10"
base64 = "0.22"
